force-app/main/default/objects/Account/fields/DD_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>DD_Group_Number__c</fullName>
    <label>DD Group Number</label>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Delta Dental assigned group number. Populated at policy bind. Used as external ID for data integration.</description>
</CustomField>