force-app/main/default/objects/Account/fields/Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Group_Size__c</fullName>
    <label>Group Size</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>Total eligible employee count for this employer group. Used to determine segment eligibility and enforce minimum group size rules.</description>
</CustomField>