force-app/main/default/objects/Account/fields/Industry_Rate_Level__c.field-meta.xml
<CustomField>
    <fullName>Industry_Rate_Level__c</fullName>
    <label>Industry Rate Level</label>
    <type>Picklist</type>
    <description>Resolved rate level from the SIC code mapping. Populated automatically by the SIC validation flow. Level 2 industries carry a rate surcharge.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Level 1</fullName><default>false</default><label>Level 1</label></value>
            <value><fullName>Level 2</fullName><default>false</default><label>Level 2</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>